polish the api x30
